--- a/CyberTutorial.WebApp/appsettings.json
+++ b/CyberTutorial.WebApp/appsettings.json
@@ -9,5 +9,9 @@
   "Api": {
     "LocalApiEndPoint": "https://localhost:7196",
     "PublishedApiEndPoint": "https://cybertutorial-api.com"
+  },
+  "AES": {
+    "Key": "2r5u8x/A?D(G+KbPeShVkYp3s6v9y$B&",
+    "InitializationVector": "B&E)H@McQfTjWmZq"
   }
 }
