--- a/CyberTutorial.Contracts/CyberTutorial.Contracts.csproj
+++ b/CyberTutorial.Contracts/CyberTutorial.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
