--- a/CyberTutorial.API/appsettings.json
+++ b/CyberTutorial.API/appsettings.json
@@ -1,13 +1,13 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=CyberTutorial;Trusted_Connection=True"
+    "DB_CONNECTION_STRING": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=CyberTutorial;Trusted_Connection=True"
   },
   "JWtSettings": {
     "Audience": "CyberTutorial",
     "ExpiryDays": 30,
     "Issuer": "CyberTutorial",
-    "Secret": ""
+    "Secret": "A%D*G-KaPdSgVkYp3s6v9y$B&E(H+MbQ"
   },
   "Logging": {
     "LogLevel": {
