--- a/CyberTutorial.WebApp/CyberTutorial.WebApp.csproj
+++ b/CyberTutorial.WebApp/CyberTutorial.WebApp.csproj
@@ -1,21 +1,139 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>disable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>5f776887-0e52-4fec-a0d9-9d22b6a4b356</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>5f776887-0e52-4fec-a0d9-9d22b6a4b356</UserSecretsId>
+		<DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<None Include="wwwroot\css\site.css" />
+		<None Include="wwwroot\favicon.ico" />
+		<None Include="wwwroot\Images\Carousel1.jpeg" />
+		<None Include="wwwroot\Images\Carousel2.jpeg" />
+		<None Include="wwwroot\Images\Carousel3.jpeg" />
+		<None Include="wwwroot\js\site.js" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.rtl.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.rtl.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.rtl.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-grid.rtl.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.rtl.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.rtl.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.rtl.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-reboot.rtl.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.rtl.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.rtl.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.rtl.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap-utilities.rtl.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.rtl.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.rtl.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.rtl.min.css" />
+		<None Include="wwwroot\lib\bootstrap\dist\css\bootstrap.rtl.min.css.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.js.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.bundle.min.js.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.esm.js" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.esm.js.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.esm.min.js" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.esm.min.js.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.js" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.js.map" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js" />
+		<None Include="wwwroot\lib\bootstrap\dist\js\bootstrap.min.js.map" />
+		<None Include="wwwroot\lib\bootstrap\LICENSE" />
+		<None Include="wwwroot\lib\Chart.js\chart.esm.js" />
+		<None Include="wwwroot\lib\Chart.js\chart.esm.min.js" />
+		<None Include="wwwroot\lib\Chart.js\chart.js" />
+		<None Include="wwwroot\lib\Chart.js\chart.min.js" />
+		<None Include="wwwroot\lib\Chart.js\chart.mjs" />
+		<None Include="wwwroot\lib\Chart.js\helpers.esm.js" />
+		<None Include="wwwroot\lib\Chart.js\helpers.esm.min.js" />
+		<None Include="wwwroot\lib\Chart.js\helpers.mjs" />
+		<None Include="wwwroot\lib\font-awesome\css\all.css" />
+		<None Include="wwwroot\lib\font-awesome\css\all.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\brands.css" />
+		<None Include="wwwroot\lib\font-awesome\css\brands.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\fontawesome.css" />
+		<None Include="wwwroot\lib\font-awesome\css\fontawesome.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\regular.css" />
+		<None Include="wwwroot\lib\font-awesome\css\regular.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\solid.css" />
+		<None Include="wwwroot\lib\font-awesome\css\solid.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\svg-with-js.css" />
+		<None Include="wwwroot\lib\font-awesome\css\svg-with-js.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\v4-font-face.css" />
+		<None Include="wwwroot\lib\font-awesome\css\v4-font-face.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\v4-shims.css" />
+		<None Include="wwwroot\lib\font-awesome\css\v4-shims.min.css" />
+		<None Include="wwwroot\lib\font-awesome\css\v5-font-face.css" />
+		<None Include="wwwroot\lib\font-awesome\css\v5-font-face.min.css" />
+		<None Include="wwwroot\lib\font-awesome\js\all.js" />
+		<None Include="wwwroot\lib\font-awesome\js\all.min.js" />
+		<None Include="wwwroot\lib\font-awesome\js\brands.js" />
+		<None Include="wwwroot\lib\font-awesome\js\brands.min.js" />
+		<None Include="wwwroot\lib\font-awesome\js\conflict-detection.js" />
+		<None Include="wwwroot\lib\font-awesome\js\conflict-detection.min.js" />
+		<None Include="wwwroot\lib\font-awesome\js\fontawesome.js" />
+		<None Include="wwwroot\lib\font-awesome\js\fontawesome.min.js" />
+		<None Include="wwwroot\lib\font-awesome\js\regular.js" />
+		<None Include="wwwroot\lib\font-awesome\js\regular.min.js" />
+		<None Include="wwwroot\lib\font-awesome\js\solid.js" />
+		<None Include="wwwroot\lib\font-awesome\js\solid.min.js" />
+		<None Include="wwwroot\lib\font-awesome\js\v4-shims.js" />
+		<None Include="wwwroot\lib\font-awesome\js\v4-shims.min.js" />
+		<None Include="wwwroot\lib\font-awesome\sprites\brands.svg" />
+		<None Include="wwwroot\lib\font-awesome\sprites\regular.svg" />
+		<None Include="wwwroot\lib\font-awesome\sprites\solid.svg" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-brands-400.ttf" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-brands-400.woff2" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-regular-400.ttf" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-regular-400.woff2" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-solid-900.ttf" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-solid-900.woff2" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-v4compatibility.ttf" />
+		<None Include="wwwroot\lib\font-awesome\webfonts\fa-v4compatibility.woff2" />
+		<None Include="wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.js" />
+		<None Include="wwwroot\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js" />
+		<None Include="wwwroot\lib\jquery-validation-unobtrusive\LICENSE.txt" />
+		<None Include="wwwroot\lib\jquery-validation\dist\additional-methods.js" />
+		<None Include="wwwroot\lib\jquery-validation\dist\additional-methods.min.js" />
+		<None Include="wwwroot\lib\jquery-validation\dist\jquery.validate.js" />
+		<None Include="wwwroot\lib\jquery-validation\dist\jquery.validate.min.js" />
+		<None Include="wwwroot\lib\jquery-validation\LICENSE.md" />
+		<None Include="wwwroot\lib\jquery\dist\jquery.js" />
+		<None Include="wwwroot\lib\jquery\dist\jquery.min.js" />
+		<None Include="wwwroot\lib\jquery\dist\jquery.min.map" />
+		<None Include="wwwroot\lib\jquery\LICENSE.txt" />
+		<None Include="wwwroot\videos\hero-img.svg" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ErrorOr" Version="1.0.1" />
-    <PackageReference Include="Mapster" Version="7.3.0" />
-    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ErrorOr" Version="1.0.1" />
+		<PackageReference Include="Mapster" Version="7.3.0" />
+		<PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CyberTutorial.Contracts\CyberTutorial.Contracts.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\CyberTutorial.Contracts\CyberTutorial.Contracts.csproj" />
+	</ItemGroup>
 </Project>
