Updated Deployment API Endpoint

--- a/CyberTutorial.WebApp/appsettings.json
+++ b/CyberTutorial.WebApp/appsettings.json
@@ -8,7 +8,7 @@
   },
   "Api": {
     "LocalApiEndPoint": "https://localhost:7196",
-    "PublishedApiEndPoint": "https://cybertutorial-api.com"
+    "PublishedApiEndPoint": "https://cybertutorials-api.azurewebsites.net/"
   },
   "AES": {
     "Key": "2r5u8x/A?D(G+KbPeShVkYp3s6v9y$B&",
