Updated ApplicationDbContext and IApplicationDbContext added the following entittes: 1. Administator 2. Quiz 3. Question 4. EmployeeQuiz
Updated Model.Question entity changed Id to string and modified Answers by adding another entity called Model.Answer.
Updated Model.Quiz entity changed Id to string.
Updated Model.EmployeeQuiz entity changed Id to string.
Updated Model.Course entity changed Id to string.

Updated Migrations

--- a/CyberTutorial.Infrastructure/CyberTutorial.Infrastructure.csproj
+++ b/CyberTutorial.Infrastructure/CyberTutorial.Infrastructure.csproj
@@ -21,4 +21,8 @@
 		<ProjectReference Include="..\CyberTutorial.Application\CyberTutorial.Application.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Persistence\Migrations\" />
+	</ItemGroup>
+
 </Project>
